# music-rec-system

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/processed/: feature_scaler.pkl  label_encoder.pkl  mood_encoder.pkl
notebooks/: 01_data_ingestion.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb
src/: app.py  evaluate.py  model.py  processing.py  train.py  two_tower_model.pth
