[project]
name = "music-rec-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.19.0",
    "torch>=2.10.0",
]
